--- a/project-manager.html
+++ b/project-manager.html
@@ -40,8 +40,12 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://producthire.net/job/program-manager-business-systems/'>Program Manager, Business Systems | PRODUCTHIRE.NET</a></h5> 
+<h5><a href='https://jobs.crh.com/job/Nampa-Estimator-Project-Manager-Nampa%2C-ID-ID-83687/565854601/?locale=en_US&applySourceOverride=twitter'>Estimator/ Project Manager - Nampa, ID</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
+<h5><a href='https://producthire.net/job/program-manager-business-systems/'>Program Manager, Business Systems | PRODUCTHIRE.NET</a></h5> 
+<p><span class="badge badge-light">Austin New York City Palo Alto</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
 <h5><a href='https://quad.referrals.selectminds.com/jobs/project-manager-client-services-13543'>Project Manager Client Services - Be Quad</a></h5> 
@@ -80,7 +84,7 @@
 <p><span class="badge badge-light">K?ln, Deutschland</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://hearst.referrals.selectminds.com/jobs/project-manager-7415'>Project Manager - Hearst Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hearst.referrals.selectminds.com/jobs/project-manager-7415'>Project Manager - Hearst Careers</a></h5> 
 <p><span class="badge badge-light">Scottsdale, Arizona United States</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -88,7 +92,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/MX/743999698652726-project-manager'>MX Project Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MX/743999698652726-project-manager'>MX Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Lehi, UT</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -128,15 +132,15 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698640925-sr-project-manager-global-business-operations-excellence'>Biogen Sr. Project Manager, Global Business Operations Excellence | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698640925-sr-project-manager-global-business-operations-excellence'>Biogen Sr. Project Manager, Global Business Operations Excellence | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/biometrics-project-manager-31694'>Biometrics Project Manager - Syneos Health Careers</a></h5> 
+<h5><a href='https://incresearch.referrals.selectminds.com/jobs/biometrics-project-manager-31694'>Biometrics Project Manager - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">Australia</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/vmlyr/job/odgqbfwO'>VMLY&R Careers - Campaign Program Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/vmlyr/job/odgqbfwO'>VMLY&R Careers - Campaign Program Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -164,7 +168,7 @@
 <p><span class="badge badge-light">Sunnyvale California  Sunnyvale, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/plaid/99304383-55cf-46b3-a75d-1d0a44bfb521'>Plaid - Design Program Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/plaid/99304383-55cf-46b3-a75d-1d0a44bfb521'>Plaid - Design Program Manager</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -176,7 +180,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/cruxinformatics/b6a9a7cb-661d-485e-beb0-cb00a08e217f'>Crux Informatics - Technology Project Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/cruxinformatics/b6a9a7cb-661d-485e-beb0-cb00a08e217f'>Crux Informatics - Technology Project Manager</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -196,7 +200,7 @@
 <p><span class="badge badge-light">Shanghai, China</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qba9Vfw9&k=Job&j=oWVrafwc&__jvst=Employee&__jvsd=sHswVhwm&__jvsc=Twitter&bid=nCYlqMwC'>IFS North America Careers - Project Manager - ERP</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qba9Vfw9&k=Job&j=oWVrafwc&__jvst=Employee&__jvsd=sHswVhwm&__jvsc=Twitter&bid=nCYlqMwC'>IFS North America Careers - Project Manager - ERP</a></h5> 
 <p><span class="badge badge-light">North America North America United States</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -282,7 +286,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Fort Pierce, from Cu
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://www.artsandmediajobs.com/uk/job/14722/programme-manager-major-projects-1/'>Programme Manager: Major Projects with The British Museum</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.artsandmediajobs.com/uk/job/14722/programme-manager-major-projects-1/'>Programme Manager: Major Projects with The British Museum</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -296,7 +300,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">North Billerica, Massachusetts</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q919VfwY&k=Job&j=osK39fw8&__jvst=Employee&__jvsd=su86Ggw9&__jvsc=Twitter&bid=nQzeqMwk'>Quotient Technology Inc. Careers - Media Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q919VfwY&k=Job&j=osK39fw8&__jvst=Employee&__jvsd=su86Ggw9&__jvsc=Twitter&bid=nQzeqMwk'>Quotient Technology Inc. Careers - Media Project Manager</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -336,7 +340,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/jfrstaffing/job/ywghpymqsddyfkggtcymwkkwsy'>IT Project Manager | JFR Staffing</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/jfrstaffing/job/ywghpymqsddyfkggtcymwkkwsy'>IT Project Manager | JFR Staffing</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -372,7 +376,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/WernerEnterprises/743999698612677-technical-project-manager'>Werner Enterprises Technical Project Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/WernerEnterprises/743999698612677-technical-project-manager'>Werner Enterprises Technical Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Omaha, NE North America Australia Omaha, Nebraska United States Canada Mexico Australia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -436,12 +440,8 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/jobs/project-manager-i-27588'>Project Manager I - RELX Careers</a></h5> 
+<h5><a href='https://4re.referrals.selectminds.com/jobs/project-manager-i-27588'>Project Manager I - RELX Careers</a></h5> 
 <p><span class="badge badge-light">United States  Alpharetta, GA</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://nmhc.referrals.selectminds.com/jobs/project-manager-ii-epmo-full-time-days-33405'>Project Manager II-ePMO, Full-Time, Days - Northwestern Medicine Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 
